added binary choice: Kingdom vs Monkey

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
         </section>
 
         <div class="gate-wrapper">
-            <a href="mailto:jack@harperville.me" class="btn-sovereign">Approach the Ambassador</a>
-        </div>
+    <a href="mainframe.html" class="btn-sovereign">ENTER THE KINGDOM</a>
+    
+    <a href="https://www.trumpactiontracker.info" target="_blank" class="btn-monkey">I'D RATHER BE EATEN BY A FLYING MONKEY</a>
+</div>
     </main>
 
 </body>
