--- a/mainframe.html
+++ b/mainframe.html
@@ -22,8 +22,8 @@
             <div class="card profile-card">
                 <div class="card-content">
                     <h3>Jack Aspen Harper</h3>
-                    <p class="role">Chief Sovereign & Ozian Ambassador</p>
-                    <p class="bio">Designing couture at the intersection of myth and modernity. Pruning for depth. Building the House.</p>
+                    <p class="role">Chief Sovereign Officer & Ozian Ambassador for The Emerald City</p>
+                    <p class="bio">Designing couture at the intersection of myth and modernity. Pruning for depth. Building the House. Cutting sail, tossing over dead weight, burning the ships and sending a flare into the night.</p>
                 </div>
             </div>
 
@@ -57,13 +57,9 @@
                 </div>
             </div>
 
-            <div class="card music-card">
-                <div class="card-content">
-                    <i class="fa-brands fa-spotify icon-large"></i>
-                    <h3>Sonic Architecture</h3>
-                    <p>Current Rotation</p>
-                </div>
-            </div>
+           <div class="card music-card" style="padding: 0; overflow: hidden;">
+<iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/playlist/the-life-of-jack-aspen-harper/pl.u-JPAZbdZFLrLrJb2"></iframe>
+    </div>
 
         </div>
     </main>
