installed sovereign profile image

--- a/mainframe.html
+++ b/mainframe.html
@@ -19,7 +19,7 @@
 
         <div class="bento-grid">
             
-            <div class="card profile-card">
+            <div class="card profile-card" id="sovereign-profile-image">
                 <div class="card-content">
                     <h3>Jack Aspen Harper</h3>
                     <p class="role">Chief Sovereign Officer & Ozian Ambassador for The Emerald City</p>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="status-row">
                         <i class="fa-solid fa-temperature-half"></i>
-                        <span>Operating Temp: 4 Shots Espresso</span>
+                        <span>Operating Temp: RuPaul's kitty after a prance down the runway.</span>
                     </div>
                 </div>
             </div>
