--- a/mainframe.html
+++ b/mainframe.html
@@ -19,13 +19,13 @@
 
         <div class="bento-grid">
             
-            <div class="card profile-card" id="sovereign-profile-image">
-                <div class="card-content">
-                    <h3>Jack Aspen Harper</h3>
-                    <p class="role">Chief Sovereign Officer & Ozian Ambassador for The Emerald City</p>
-                    <p class="bio">Designing couture at the intersection of myth and modernity. Pruning for depth. Building the House. Cutting sail, tossing over dead weight, burning the ships and sending a flare into the night.</p>
-                </div>
-            </div>
+            <div class="card profile-card">
+    <div class="card-content profile-content-align">
+        <h3>Jack Aspen Harper</h3>
+        <p class="role">Chief Sovereign & Ozian Ambassador</p>
+        <p class="bio">Designing couture at the intersection of myth and modernity. Pruning for depth. Building the kingdom. Tossing dead-weight overboard for shark food.</p>
+    </div>
+</div>
 
             <a href="#" class="card vault-card">
                 <div class="card-bg"></div>
