--- a/mainframe.html
+++ b/mainframe.html
@@ -22,7 +22,7 @@
             <div class="card profile-card">
     <div class="card-content profile-content-align">
         <h3>Jack Aspen Harper</h3>
-        <p class="role">Chief Sovereign & Ozian Ambassador</p>
+        <p class="role">Chief Sovereign Officer & Ozian Ambassador for The Emerald City</p>
         <p class="bio">Designing couture at the intersection of myth and modernity. Pruning for depth. Building the kingdom. Tossing dead-weight overboard for shark food.</p>
     </div>
 </div>
@@ -48,7 +48,8 @@
                 <div class="card-content">
                     <div class="status-row">
                         <i class="fa-solid fa-location-dot"></i>
-                        <span>117 Poppy Field Way, Emerald City</span>
+                        <span>117 Poppy Field Way</span>
+                        <span>The Emerald City, OZ 71025</span>
                     </div>
                     <div class="status-row">
                         <i class="fa-solid fa-temperature-half"></i>
