PR Wire installed

--- a/mainframe.html
+++ b/mainframe.html
@@ -36,7 +36,7 @@
                 </div>
             </a>
 
-            <a href="#" class="card ledger-card">
+            <a href="ledger.html" class="card ledger-card">
                 <div class="card-content">
                     <i class="fa-solid fa-feather-pointed icon-large"></i>
                     <h3>The Ledger</h3>
