updated blog template page linked

--- a/ledger.html
+++ b/ledger.html
@@ -31,7 +31,7 @@
                 <div class="blog-date">NOV 23, 2025</div>
                 <h3>Defying Logic with Ambition</h3>
                 <p class="blog-summary">Testing the Harperville™ Emergency Broadcast System</p>
-                <a href="blog/introduction-test.html" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
+                <a href="blog/template.html" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
             </article>
             
             <article class="blog-card">
