added new blog entry about silence

--- a/ledger.html
+++ b/ledger.html
@@ -28,6 +28,13 @@
         <div class="blog-grid">
 
             <article class="blog-card">
+                <div class="blog-date">NOV 24, 2025</div>
+                <h3>Incoming Rant... Flying Monkeys are on their way!</h3>
+                <p class="blog-summary">Silence is horseshit. You either talk to me, give me fair attention. Or walk away. Show up or show out!</p>
+                <a href="blog/why-i-hate-silence.html" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
+            </article>
+
+            <article class="blog-card">
                 <div class="blog-date">NOV 23, 2025</div>
                 <h3>Defying Logic with Ambition</h3>
                 <p class="blog-summary">Testing the Harperville™ Emergency Broadcast System</p>
@@ -41,12 +48,7 @@
                 <a href="blog/post-001.html" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
             </article>
             
-            <article class="blog-card">
-                <div class="blog-date">NOV 20, 2025</div>
-                <h3>Reciprocity Logic</h3>
-                <p class="blog-summary">Why we cut the $30 subscription and how math defends sovereignty.</p>
-                <a href="#" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
-            </article>
+            
 
         </div>
     </main>
