--- a/ledger.html
+++ b/ledger.html
@@ -31,14 +31,14 @@
                 <div class="blog-date">NOV 23, 2025</div>
                 <h3>Just a test post!</h3>
                 <p class="blog-summary">Test Post</p>
-                <a href="blog/11-23-2025-newpost.html" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
+                <a href="#" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
             </article>
 
             <article class="blog-card">
                 <div class="blog-date">NOV 22, 2025</div>
                 <h3>Incoming Rant... Flying Monkeys are on their way!</h3>
                 <p class="blog-summary">Just another test post. </p>
-                <a href="blog/template.html" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
+                <a href="#" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
             </article>
 
             <article class="blog-card">
