locked landing scroll but other pages freely scroll CSS class updated with "cinematic-lock"

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Harperville | The Sovereign House</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="cinematic-lock">
 
     <div class="noise"></div>
 
