updated comet-pass to 3 seconds

--- a/mainframe.html
+++ b/mainframe.html
@@ -48,7 +48,7 @@
                 <div class="card-content">
                     <div class="status-row">
                         <i class="fa-solid fa-location-dot"></i>
-                        <span>117 Poppy Field Way</span>
+                        <span>117 Poppy Field Way</span><br>
                         <span>The Emerald City, OZ 71025</span>
                     </div>
                     <div class="status-row">
