updated coordinate for HQ pin

--- a/mainframe.html
+++ b/mainframe.html
@@ -101,9 +101,9 @@
                 <span class="pin-label">THE EMERALD CITY</span>
             </div>
 
-            <div class="map-pin pin-harperville" style="top: 32%; left: 24%;">
+            <div class="map-pin pin-harperville" style="top: 48%; left: 32%;">
                 <i class="fa-solid fa-star star-icon"></i>
-                <span class="pin-label label-highlight">HARPERVILLE HQ</span>
+                <span class="pin-label label-highlight">HARPERVILLE™ HQ</span>
             </div>
 
             <div class="map-pin" style="top: 28%; left: 82%;">
