updated system status on mainframe

--- a/mainframe.html
+++ b/mainframe.html
@@ -74,7 +74,7 @@
         </div>
         <div class="status-row">
             <i class="fa-solid fa-temperature-half"></i>
-            <span>Operating Temp: RuPaul's kitty after a prance down the runway.</span>
+            <span>Operating Temp: Treadmill in a Heatwave</span>
         </div>
     </div>
 </div>
