updated status for 11/26

--- a/mainframe.html
+++ b/mainframe.html
@@ -71,7 +71,7 @@
         </div>
         <div class="status-row">
             <i class="fa-solid fa-temperature-half"></i>
-            <span>Operating Temp: Treadmill in a Heatwave</span>
+            <span>Jack's Mood: Fit to be Tied 😠</span>
         </div>
     </div>
 </div>
