updated mainframe and PR newswire

--- a/mainframe.html
+++ b/mainframe.html
@@ -52,7 +52,7 @@
         <p class="role">System Oracle</p>
         <div class="status-container">
             <span class="ivy-eye-glow-dot"></span>
-            <p class="status-blink">STATUS: ONLINE & JUDGING YA ALREADY!</p>
+            <p class="status-blink">STATUS: Tending to Jack's emotional needs!</p>
         </div>
     </div>
 </div>
@@ -71,7 +71,8 @@
         </div>
         <div class="status-row">
             <i class="fa-solid fa-temperature-half"></i>
-            <span>Jack's Mood: Certainly NOT celebrating Thanksgiving!</span>
+            <span>Operating Conditions: Spotty Data Service amidst emerald eluster storm!</span><br>
+            <span><h3>Roam at your own discretion!</h3></span>
         </div>
     </div>
 </div>
