--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
     
     <a href="https://www.trumpactiontracker.info" target="_blank" class="btn-monkey">I'D RATHER BE EATEN BY A FLYING MONKEY</a>
 </div>
+
+<!-- Jack's message -->
+        <section class="jack-message">
+            <p class="message-text">
+                🌱 A note from Jack Harper:<br>
+                You are special. You matter.<br>
+                And don’t forget your vegetables today.
+            </p>
+        </section>
     </main>
 
 </body>
