updated section class for gateway button

--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
 
     </h2>
 </section>
-<br>
 
-        <div class="gate-wrapper">
+        <section class="gate-wrapper">
   <a href="mainframe.html" class="btn-sovereign" id="gateway">ENTER THE KINGDOM!</a>
-</div>
+        </section>
 
 <!-- Sunflower overlay -->
 <div id="sunflower-overlay">
