updated button structure

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ document.getElementById("gateway").addEventListener("click", (e) => {
 });
 </script>
 
-    
-    <a href="https://www.trumpactiontracker.info" target="_blank" class="btn-monkey">I'D RATHER BE EATEN BY A FLYING MONKEY</a>
-</div>
+    <section><a href="https://www.trumpactiontracker.info" target="_blank" class="btn-monkey">I'D RATHER BE EATEN BY A FLYING MONKEY</a></section>
+
+
 
 
     </main>
