updated landing page text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harperville | The Sovereign House</title>
+    <title>Harperville | Where Good Happens</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="cinematic-lock">
@@ -26,12 +26,12 @@
                 And don’t forget your vegetables today.
             </p>
         </section>
-
+<br>
        <section class="provocation">
     <h2>
-        <span class="gold-pulse">UNDERGOING</span> 
+        <span class="gold-pulse">BECAUSE BECAUSE,</span> 
         <br> 
-        <span class="gold-pulse">SITE MAINTENANCE</span> 
+        <span class="gold-pulse">BECAUSE BECAUSE!</span> 
 
     </h2>
 </section>
