--- a/mainframe.html
+++ b/mainframe.html
@@ -52,7 +52,7 @@
         <p class="role">System Oracle</p>
         <div class="status-container">
             <span class="ivy-eye-glow-dot"></span>
-            <p class="status-blink">STATUS: My tail's flicking, but yet you still keep talking.💁</p>
+            <p class="status-blink">STATUS: Honestly, hooman. I'm napping!💁</p>
         </div>
     </div>
 </div>
@@ -71,8 +71,8 @@
         </div>
         <div class="status-row">
             <i class="fa-solid fa-temperature-half"></i>
-            <span>Operating Conditions: Sneezing and sniffling.</span><br>
-            <span><h3>It's a day to stay under the covers!!</h3></span>
+            <span>Current Forecast: Optimal Emerald Shimmers.</span><br>
+            <span><h3>It's a day to make someone's day!</h3></span>
         </div>
     </div>
 </div>
