updated morning status

--- a/mainframe.html
+++ b/mainframe.html
@@ -52,7 +52,7 @@
         <p class="role">System Oracle</p>
         <div class="status-container">
             <span class="ivy-eye-glow-dot"></span>
-            <p class="status-blink">STATUS: Glad my Oopie is back home!</p>
+            <p class="status-blink">STATUS: I got my breakfast, now I may prounce like a true queen!</p>
         </div>
     </div>
 </div>
@@ -71,8 +71,8 @@
         </div>
         <div class="status-row">
             <i class="fa-solid fa-temperature-half"></i>
-            <span>Current Forecast: Ozian starlight baked with mystique.</span><br>
-            <span><h3>Stay warm. Stay safe. Stay YOU!</h3></span>
+            <span>Current Forecast: Cold. </span><br>
+            <span><h3>As for me? I'm eating oats!!</h3></span>
         </div>
     </div>
 </div>
