updated statuses and index changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harperville | Where Good Happens</title>
+    <title>Harperville™ | Un-Popular Nation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="cinematic-lock">
@@ -32,12 +32,11 @@
         <span class="gold-pulse">BECAUSE BECAUSE,</span> 
         <br> 
         <span class="gold-pulse">BECAUSE BECAUSE!</span> 
-
     </h2>
 </section>
 
         <section class="gate-wrapper">
-  <a href="mainframe.html" class="btn-sovereign" id="gateway">ENTER THE KINGDOM!</a>
+  <a href="mainframe.html" class="btn-sovereign" id="gateway">OPEN SESAME!</a>
         </section>
 
 <!-- Sunflower overlay -->
@@ -75,7 +74,7 @@
   background: linear-gradient(
     120deg,
     transparent 0%,
-    rgba(255,255,255,0.6) 50%,
+    rgba(255,255,255,0.6) 0%,
     transparent 100%
   );
   background-size: 200% 200%;
