added vault gate, vault-main, password access, updated linkage from mainframe.

--- a/mainframe.html
+++ b/mainframe.html
@@ -27,12 +27,12 @@
     </div>
 </div>
 
-            <a href="#" class="card vault-card">
+            <a href="vault-gate.html" class="card vault-card">
                 <div class="card-bg"></div>
                 <div class="card-content">
                     <i class="fa-solid fa-layer-group icon-large"></i>
                     <h3>The Vault</h3>
-                    <p>We're not even sure what's behind this curtain, either!</p>
+                    <p>What's waiting inside?🗝️</p>
                 </div>
             </a>
 
