Updated mainframe statuses

--- a/mainframe.html
+++ b/mainframe.html
@@ -52,7 +52,7 @@
         <p class="role">System Oracle</p>
         <div class="status-container">
             <span class="ivy-eye-glow-dot"></span>
-            <p class="status-blink">STATUS: The window's foggy, I can't see the birds, so I'm napping.</p>
+            <p class="status-blink">STATUS: Conked out asleep. That's what I do best!</p>
         </div>
     </div>
 </div>
@@ -71,8 +71,8 @@
         </div>
         <div class="status-row">
             <i class="fa-solid fa-temperature-half"></i>
-            <span>Current Forecast: Chilly w/ a side of reprieve </span><br>
-            <span><h3>Never replace your mama with someone else just because she isn't "alive."</h3></span>
+            <span>Current Forecast: Rainbows all across the Ozian sky today!</span><br>
+            <span><h3>New blog post coming later. Maybe? Who knows? Harperville™ Standard Time operates on "island time."</h3></span>
         </div>
     </div>
 </div>
