new blog post, updated statuses

--- a/ledger.html
+++ b/ledger.html
@@ -28,10 +28,10 @@
         <div class="blog-grid">
                      
             <article class="blog-card">
-                <div class="blog-date">NOV 23, 2025</div>
-                <h3>Just a test post!</h3>
-                <p class="blog-summary">Test Post</p>
-                <a href="#" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
+                <div class="blog-date">Dec 10, 2025</div>
+                <h3>What is Harperville™?</h3>
+                <p class="blog-summary">It's a place, it's an idea, it's my digital home!</p>
+                <a href="blog/welcome-to-jack-harper-fantasy-world.html" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
             </article>
 
             
