--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   background: linear-gradient(
     120deg,
     transparent 0%,
-    rgba(255,255,255,0.6) 0%,
+    rgba(2, 1, 1, 0) 0%,
     transparent 100%
   );
   background-size: 200% 200%;
