linked blog with ledger page

--- a/ledger.html
+++ b/ledger.html
@@ -26,7 +26,14 @@
         </header>
 
         <div class="blog-grid">
-                     
+            
+            <article class="blog-card">
+                <div class="blog-date">Dec 13, 2025</div>
+                <h3>The Day the Weather Finally Said <i>‘Fuck This’</i> and That be That</h3>
+                <p class="blog-summary">I’m going to live, damn it. Messily. Softly. Honestly. With fucks used as commas, commas used as breaths, and breaths used as proof that I’m still fucking here.</p>
+                <a href="blog/bullshit-cosmos-and-taylor-alison-swift.html" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
+            </article>
+
             <article class="blog-card">
                 <div class="blog-date">Dec 10, 2025</div>
                 <h3>What is Harperville™?</h3>
