--- a/mainframe.html
+++ b/mainframe.html
@@ -52,7 +52,7 @@
         <p class="role">System Oracle</p>
         <div class="status-container">
             <span class="ivy-eye-glow-dot"></span>
-            <p class="status-blink">STATUS: Listening to Midnights: The 'til Dawn Edition</p>
+            <p class="status-blink">STATUS: Watching the birds! Yeeep.</p>
         </div>
     </div>
 </div>
@@ -71,8 +71,8 @@
         </div>
         <div class="status-row">
             <i class="fa-solid fa-temperature-half"></i>
-            <span>Current Forecast: Raining fucks and opalite glimmers</span><br>
-            <span><h3>Happy Birthday, Taylor! 🫶</h3></span>
+            <span>Current Forecast: Electric buzzing. Stay indoors and grounded!</span><br>
+            <span><h3>Not a day for cold exposure. Nuh uh!</h3></span>
         </div>
     </div>
 </div>
