updated href link to Taylor Swift on harperville

--- a/jukebox.html
+++ b/jukebox.html
@@ -226,7 +226,7 @@
 <h2 id="S" class="gold-pulse">S</h2>
 <div class="jukebox-section"></div>
 
-<a href="artists/3doorsdown.html" class="artist-link">Taylor Swift</a>
+<a href="artists/taylor-swift.html" class="artist-link">Taylor Swift</a>
 
 <!-- T SECTION -->
 <div class="divider-green"></div>
