added jukebox disclaimer and adjusted embed container width

--- a/jukebox.html
+++ b/jukebox.html
@@ -91,6 +91,12 @@
     <p class="jukebox-subtitle">
       Click a letter or number to jump to artists beginning with that character.
     </p>
+    <p class="jukebox-disclaimer">
+  Content on this page, including commentary and external links, reflects personal views and is
+  not endorsed by any artists, management teams, publishers, or affiliated entities. Music embeds
+  are the property of Apple Music® and are displayed under Apple’s permitted content‑sharing
+  functionality as outlined in their Terms and Conditions.
+</p>
 
     <!-- ALPHABET INDEX -->
     <div class="jukebox-index">
