added jukebox disclaimer to all vault -> jukebox linked pages

--- a/artists/artist-template.html
+++ b/artists/artist-template.html
@@ -60,6 +60,12 @@
       <i class="fa-solid fa-arrow-left"></i> BACK TO JACK'S JUKEBOX
     </a>
     <br>
+    <p class="jukebox-disclaimer">
+  Content on this page, including commentary and external links, reflects personal views and is
+  not endorsed by any artists, management teams, publishers, or affiliated entities. Music embeds
+  are the property of Apple Music® and are displayed under Apple’s permitted content‑sharing
+  functionality as outlined in their Terms and Conditions.
+</p>
     <br>
 
     <h1 class="gold-pulse">Artist Name</h1>
