fixed the dividers on jukebox listing

--- a/jukebox.html
+++ b/jukebox.html
@@ -148,7 +148,7 @@
 <div class="jukebox-section"></div>
 
 <!-- C SECTION -->
-<div class="divider-ppink"></div>
+<div class="divider-pink"></div>
 <h2 id="C" class="gold-pulse">C</h2>
 <div class="jukebox-section"></div>
 
