Added linkage to Jacks Jukebox and uploaded first round of Artist pages.

--- a/jukebox.html
+++ b/jukebox.html
@@ -141,11 +141,15 @@
 <div class="divider-pink"></div>
 <h2 id="A" class="gold-pulse">A</h2>
 <div class="jukebox-section"></div>
+<a href="/artists/abba.html" class="artist-link">ABBA</a><br>
+<a href="/artists/adele.html" class="artist-link">Adele</a>
 
 <!-- B SECTION -->
 <div class="divider-green"></div>
 <h2 id="B" class="gold-pulse">B</h2>
 <div class="jukebox-section"></div>
+<a href="/artists/sara-bareilles.html" class="artist-link">Sara Bareilles</a>
+
 
 <!-- C SECTION -->
 <div class="divider-pink"></div>
@@ -166,11 +170,16 @@
 <div class="divider-green"></div>
 <h2 id="F" class="gold-pulse">F</h2>
 <div class="jukebox-section"></div>
+<a href="/artists/fleetwood-mac.html" class="artist-link">Fleetwood Mac</a><br>
+<a href="/artists/florence-and-the-machine.html" class="artist-link">Florence + The Machine</a>
+
 
 <!-- G SECTION -->
 <div class="divider-pink"></div>
 <h2 id="G" class="gold-pulse">G</h2>
 <div class="jukebox-section"></div>
+<a href="/artists/lady-gaga.html" class="artist-link">Lady Gaga</a>
+
 
 <!-- H SECTION -->
 <div class="divider-green"></div>
@@ -181,6 +190,8 @@
 <div class="divider-pink"></div>
 <h2 id="I" class="gold-pulse">I</h2>
 <div class="jukebox-section"></div>
+<a href="/artists/imagine-dragons.html" class="artist-link">Imagine Dragons</a>
+
 
 <!-- J SECTION -->
 <div class="divider-green"></div>
@@ -191,6 +202,8 @@
 <div class="divider-pink"></div>
 <h2 id="K" class="gold-pulse">K</h2>
 <div class="jukebox-section"></div>
+<a href="/artists/kesha.html" class="artist-link">Ke$ha</a>
+
 
 <!-- L SECTION -->
 <div class="divider-green"></div>
@@ -201,6 +214,7 @@
 <div class="divider-pink"></div>
 <h2 id="M" class="gold-pulse">M</h2>
 <div class="jukebox-section"></div>
+<a href="/artists/maroon-5.html" class="artist-link">Maroon 5</a>
 
 <!-- N SECTION -->
 <div class="divider-green"></div>
@@ -216,6 +230,8 @@
 <div class="divider-green"></div>
 <h2 id="P" class="gold-pulse">P</h2>
 <div class="jukebox-section"></div>
+<a href="/artists/katy-perry.html" class="artist-link">Katy Perry</a>
+
 
 <!-- Q SECTION -->
 <div class="divider-pink"></div>
@@ -231,8 +247,9 @@
 <div class="divider-pink"></div>
 <h2 id="S" class="gold-pulse">S</h2>
 <div class="jukebox-section"></div>
-
-<a href="artists/taylor-swift.html" class="artist-link">Taylor Swift</a>
+<a href="/artists/ed-sheeran.html" class="artist-link">Ed Sheeran</a><br>
+<a href="/artists/britney-spears.html" class="artist-link">Britney Spears</a><br>
+<a href="/artists/taylor-swift.html" class="artist-link">Taylor Swift</a>
 
 <!-- T SECTION -->
 <div class="divider-green"></div>
