--- a/main-vault.html
+++ b/main-vault.html
@@ -38,7 +38,7 @@
       </a>
 
       <!-- Jack's Jukebox -->
-      <a href="#" class="card">
+      <a href="/jukebox.html" class="card">
         <div class="card-content">
           <i class="fa-solid fa-music icon-large"></i>
           <h3>Jack's Jukebox</h3>
