--- a/mainframe.html
+++ b/mainframe.html
@@ -52,7 +52,7 @@
         <p class="role">System Oracle</p>
         <div class="status-container">
             <span class="ivy-eye-glow-dot"></span>
-            <p class="status-blink">STATUS: Has the zooooooomies.</p>
+            <p class="status-blink">STATUS: Begging Oopie for a THIRD wet meal already.</p>
         </div>
     </div>
 </div>
@@ -71,8 +71,8 @@
         </div>
         <div class="status-row">
             <i class="fa-solid fa-temperature-half"></i>
-            <span>Current Forecast: Petty Purple Rain</span><br>
-            <span><h3> 🤣 </h3></span>
+            <span>Current Operating Conditions: Rusty and Stiff</span><br>
+            <span><h3> Grey's Anatomy marathon at DiMora Harper!! </h3></span>
         </div>
     </div>
 </div>
