--- a/jukebox.html
+++ b/jukebox.html
@@ -140,15 +140,18 @@
 <!-- A SECTION -->
 <div class="divider-pink"></div>
 <h2 id="A" class="gold-pulse">A</h2>
-<div class="jukebox-section"></div>
-<a href="/artists/abba.html" class="artist-link">ABBA</a><br>
-<a href="/artists/adele.html" class="artist-link">Adele</a>
+<div class="jukebox-section">
+  <a href="/artists/abba.html" class="artist-link">ABBA</a>
+  <a href="/artists/adele.html" class="artist-link">Adele</a></div>
+
 
 <!-- B SECTION -->
 <div class="divider-green"></div>
 <h2 id="B" class="gold-pulse">B</h2>
-<div class="jukebox-section"></div>
-<a href="/artists/sara-bareilles.html" class="artist-link">Sara Bareilles</a>
+<div class="jukebox-section">
+  <a href="/artists/sara-bareilles.html" class="artist-link">Sara Bareilles</a>
+</div>
+
 
 
 <!-- C SECTION -->
@@ -169,16 +172,19 @@
 <!-- F SECTION -->
 <div class="divider-green"></div>
 <h2 id="F" class="gold-pulse">F</h2>
-<div class="jukebox-section"></div>
-<a href="/artists/fleetwood-mac.html" class="artist-link">Fleetwood Mac</a><br>
-<a href="/artists/florence-and-the-machine.html" class="artist-link">Florence + The Machine</a>
+<div class="jukebox-section">
+  <a href="/artists/fleetwood-mac.html" class="artist-link">Fleetwood Mac</a>
+  <a href="/artists/florence-and-the-machine.html" class="artist-link">Florence + The Machine</a>
+</div>
+
 
 
 <!-- G SECTION -->
 <div class="divider-pink"></div>
 <h2 id="G" class="gold-pulse">G</h2>
-<div class="jukebox-section"></div>
-<a href="/artists/lady-gaga.html" class="artist-link">Lady Gaga</a>
+<div class="jukebox-section">
+  <a href="/artists/lady-gaga.html" class="artist-link">Lady Gaga</a>
+</div>
 
 
 <!-- H SECTION -->
@@ -189,8 +195,9 @@
 <!-- I SECTION -->
 <div class="divider-pink"></div>
 <h2 id="I" class="gold-pulse">I</h2>
-<div class="jukebox-section"></div>
-<a href="/artists/imagine-dragons.html" class="artist-link">Imagine Dragons</a>
+<div class="jukebox-section">
+  <a href="/artists/imagine-dragons.html" class="artist-link">Imagine Dragons</a>
+</div>
 
 
 <!-- J SECTION -->
@@ -201,8 +208,9 @@
 <!-- K SECTION -->
 <div class="divider-pink"></div>
 <h2 id="K" class="gold-pulse">K</h2>
-<div class="jukebox-section"></div>
-<a href="/artists/kesha.html" class="artist-link">Ke$ha</a>
+<div class="jukebox-section">
+  <a href="/artists/kesha.html" class="artist-link">Ke$ha</a>
+</div>
 
 
 <!-- L SECTION -->
@@ -213,8 +221,9 @@
 <!-- M SECTION -->
 <div class="divider-pink"></div>
 <h2 id="M" class="gold-pulse">M</h2>
-<div class="jukebox-section"></div>
-<a href="/artists/maroon-5.html" class="artist-link">Maroon 5</a>
+<div class="jukebox-section">
+  <a href="/artists/maroon-5.html" class="artist-link">Maroon 5</a>
+</div>
 
 <!-- N SECTION -->
 <div class="divider-green"></div>
@@ -229,8 +238,9 @@
 <!-- P SECTION -->
 <div class="divider-green"></div>
 <h2 id="P" class="gold-pulse">P</h2>
-<div class="jukebox-section"></div>
-<a href="/artists/katy-perry.html" class="artist-link">Katy Perry</a>
+<div class="jukebox-section">
+  <a href="/artists/katy-perry.html" class="artist-link">Katy Perry</a> 
+</div>
 
 
 <!-- Q SECTION -->
@@ -246,10 +256,12 @@
 <!-- S SECTION -->
 <div class="divider-pink"></div>
 <h2 id="S" class="gold-pulse">S</h2>
-<div class="jukebox-section"></div>
-<a href="/artists/ed-sheeran.html" class="artist-link">Ed Sheeran</a><br>
-<a href="/artists/britney-spears.html" class="artist-link">Britney Spears</a><br>
-<a href="/artists/taylor-swift.html" class="artist-link">Taylor Swift</a>
+<div class="jukebox-section">
+  <a href="/artists/ed-sheeran.html" class="artist-link">Ed Sheeran</a>
+  <a href="/artists/britney-spears.html" class="artist-link">Britney Spears</a>
+  <a href="/artists/taylor-swift.html" class="artist-link">Taylor Swift</a>
+</div>
+
 
 <!-- T SECTION -->
 <div class="divider-green"></div>
