updated landing page schema

--- a/index.html
+++ b/index.html
@@ -3,8 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Harperville™ is the creative sanctuary of Jack Aspen Harper — nonbinary author of MM romance and LGBTQ+ fiction, Ozian Ambassador for The Emerald City, and curator of mythic archives, emotional weather reports, and narrative repair.">
+    <meta name="keywords" content="Jack Aspen Harper, MM Romance Author, LGBTQ+ Fiction, Blog, Ozian Ambassador, Harperville, Creative Archive, Nonbinary Writer, Digital Sanctuary, Fashion, Armchair Connsultant, Narrative Repair, Emotional Weather Reports">
+    <meta name="author" content="Jack Aspen Harper">
+
     <title>Harperville™ | Un-Popular Nation</title>
     <link rel="stylesheet" href="style.css">
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Jack Aspen Harper",
+  "alternateName": "Jack Harper",
+  "gender": "Nonbinary",
+  "url": "https://harperville.me",
+  "description": "Nonbinary author of MM romance and LGBTQ+ fiction, The Ozian Ambassador for The Emerald City, and curator of Harperville™ — a mythic digital sanctuary of creative archives, playlists, satire, and emotional weather.",
+  "jobTitle": "Author, Creative Mythmaker",
+  "knowsAbout": [
+    "MM Romance",
+    "LGBTQ+ Fiction",
+    "Author Networking",
+    "Book Cover Design",
+    "Schizophrenia",
+    "Mental Health and Disability Advocacy",
+    "Narrative Repair",
+    "Digital Mythmaking",
+    "Ozian Lore",
+    "Wicked Fandom",
+    "Swiftie Fandom",
+    "Fashion",
+    "Graphic Design",
+    "Cosmetics",
+    "Skincare",
+    "Marketing",
+    "Brand Management",
+    "Pharmacy Policy",
+    "Pharmacology",
+    "Pharmaceuticals",
+    "Wellness Education",
+    "Pharmacy Administration"
+  ],
+  "sameAs": [
+    "https://www.instagram.com/thejackharper/",
+    "https://harperville.me/ledger",
+    "https://www.amazon.com/stores/Jack-Harper/author/B0BVKSW3QR?",
+    "https://harperville.substack.com/"
+  ]
+}
+</script>
+
 </head>
 <body class="cinematic-lock">
 
