updated even more schema metadata on landing page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Harperville™ is the creative sanctuary of Jack Aspen Harper — nonbinary author of MM romance and LGBTQ+ fiction, Ozian Ambassador for The Emerald City, and curator of mythic archives, emotional weather reports, and narrative repair.">
-    <meta name="keywords" content="Jack Aspen Harper, MM Romance Author, LGBTQ+ Fiction, Blog, Ozian Ambassador, Harperville, Creative Archive, Nonbinary Writer, Digital Sanctuary, Fashion, Armchair Connsultant, Narrative Repair, Emotional Weather Reports">
-    <meta name="author" content="Jack Aspen Harper">
+    <meta name="keywords" content="Jack Aspen Harper, Jack Harper, Distance Between Him, Sands of Time, Grayson Welles, Julian Torres, Miles Langford, Alex Wilkins, Hart's Inferno, Dante Delatore, Orson Hart, Propulsive Fiction, MM Romance Author, LGBTQ+ Fiction, Blog, Ozian Ambassador, Mental Health and Disability Advocacy, Harperville, Creative Archive, Nonbinary Writer, Digital Sanctuary, Fashion, Armchair Connsultant, Narrative Repair, Emotional Weather Reports">
+    <meta name="author" content="Jack Aspen Harper, Jack Harper Gay Romance Author">
 
     <title>Harperville™ | Un-Popular Nation</title>
     <link rel="stylesheet" href="style.css">
