--- a/mainframe.html
+++ b/mainframe.html
@@ -19,13 +19,14 @@
 
         <div class="bento-grid">
             
-            <div class="card profile-card">
-    <div class="card-content profile-content-align">
-        <h3>Jack Aspen Harper</h3>
-        <p class="role">Ozian Ambassador for The Emerald City</p>
-        <p class="bio">Creating a mythic world integrated with their inner child, where an imagination can be expressive, cathartic, and playful.</p>
-    </div>
-</div>
+            <a href="/about-jack-aspen-harper.html" class="card profile-card">
+  <div class="card-content profile-content-align">
+      <h3>Jack Aspen Harper</h3>
+      <p class="role">Ozian Ambassador for The Emerald City</p>
+      <p class="bio">Creating a mythic world integrated with their inner child, where imagination becomes expressive, cathartic, and playful.</p>
+  </div>
+</a>
+
 
             <a href="vault-gate.html" class="card vault-card">
                 <div class="card-bg"></div>
