--- a/mainframe.html
+++ b/mainframe.html
@@ -23,7 +23,7 @@
   <div class="card-content profile-content-align">
       <h3>Jack Aspen Harper</h3>
       <p class="role">Ozian Ambassador for The Emerald City</p>
-      <p class="bio">Creating a mythic world integrated with their inner child, where imagination becomes expressive, cathartic, and playful.</p>
+      <p class="bio">Learn about the mythic world I've integrated with my inner child, where imagination becomes expressive, cathartic, and playful.</p>
   </div>
 </a>
 
