Updated all artist pages to consistently have same pulsating bg

--- a/artists/britney-spears.html
+++ b/artists/britney-spears.html
@@ -48,11 +48,16 @@
       line-height: 1.6;
       text-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
     }
+    .jukebox-artist-page-bg > * {
+  position: relative;
+  z-index: 1;
+}
+
   </style>
 </head>
 
 <!-- CHANGE THIS CLASS PER ARTIST -->
-<body class="sparkle-glinda">
+<body class="jukebox-artist-page-bg">
 
   <main class="artist-container">
 
