Updated artist schemas

--- a/artists/abba.html
+++ b/artists/abba.html
@@ -54,6 +54,21 @@
 }
 
   </style>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MusicGroup",
+  "name": "ABBA",
+  "genre": "ALT POP",
+  "description": "Curated artist feature on Jack’s Jukebox — part of Harperville™, a mythic archive of music, memory, and emotional weather.",
+  "sameAs": [
+    "https://music.apple.com/us/artist/abba/372976",
+    "https://abbasite.com/"
+  ],
+  "url": "https://harperville.me/artists/abba.html"
+}
+</script>
+
 </head>
 
 <!-- CHANGE THIS CLASS PER ARTIST -->
