--- a/artists/artist-template.html
+++ b/artists/artist-template.html
@@ -54,6 +54,20 @@
 }
 
   </style>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MusicGroup",
+  "name": "ARTIST NAME HERE",
+  "genre": "GENRE HERE",
+  "description": "Curated artist feature on Jack’s Jukebox — part of Harperville™, a mythic archive of music, memory, and emotional weather.",
+  "sameAs": [
+    "APPLE MUSIC ARTIST URL HERE"
+  ],
+  "url": "https://harperville.me/jukebox/ARTIST-SLUG.html"
+}
+</script>
+
 </head>
 
 <!-- CHANGE THIS CLASS PER ARTIST -->
