--- a/artists/florence-and-the-machine.html
+++ b/artists/florence-and-the-machine.html
@@ -54,6 +54,20 @@
 }
 
   </style>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MusicGroup",
+  "name": "Florence + The Machine",
+  "genre": "Alt Rock",
+  "description": "Curated artist feature on Jack’s Jukebox — part of Harperville™, a mythic archive of music, memory, and emotional weather.",
+  "sameAs": [
+    "https://music.apple.com/us/artist/florence-the-machine/281070699"
+  ],
+  "url": "https://harperville.me/artists/florence-and-the-machine.html"
+}
+</script>
+
 </head>
 
 <!-- CHANGE THIS CLASS PER ARTIST -->
