--- a/artists/imagine-dragons.html
+++ b/artists/imagine-dragons.html
@@ -54,6 +54,20 @@
 }
 
   </style>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MusicGroup",
+  "name": "Imagine Dragons",
+  "genre": "Alt Rock",
+  "description": "Curated artist feature on Jack’s Jukebox — part of Harperville™, a mythic archive of music, memory, and emotional weather.",
+  "sameAs": [
+    "https://music.apple.com/us/artist/imagine-dragons/358714030"
+  ],
+  "url": "https://harperville.me/jukebox/ARTIST-SLUG.html"
+}
+</script>
+
 </head>
 
 <!-- CHANGE THIS CLASS PER ARTIST -->
