--- a/artists/sara-bareilles.html
+++ b/artists/sara-bareilles.html
@@ -54,6 +54,24 @@
 }
 
   </style>
+ <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MusicGroup",
+  "name": "Sara Bareilles",
+  "genre": [
+    "Singer-Songwriter",
+    "Pop"
+  ],
+  "description": "Curated artist feature on Jack’s Jukebox — part of Harperville™, a mythic archive of music, memory, and emotional weather.",
+  "sameAs": [
+    "https://music.apple.com/us/artist/sara-bareilles/64398046"
+  ],
+  "url": "https://harperville.me/artists/sara-bareilles.html"
+}
+</script>
+
+
 </head>
 
 <!-- CHANGE THIS CLASS PER ARTIST -->
