--- a/artists/taylor-swift.html
+++ b/artists/taylor-swift.html
@@ -54,6 +54,23 @@
 }
 
   </style>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MusicGroup",
+  "name": "Taylor Swift",
+  "genre": [
+    "Singer-Songwriter",
+    "Pop"
+  ],
+  "description": "Curated artist feature on Jack’s Jukebox — part of Harperville™, a mythic archive of music, memory, and emotional weather.",
+  "sameAs": [
+    "https://music.apple.com/us/artist/taylor-swift/159260351"
+  ],
+  "url": "https://harperville.me/artists/taylor-swift.html"
+}
+</script>
+
 </head>
 
 <!-- CHANGE THIS CLASS PER ARTIST -->
