--- a/jukebox.html
+++ b/jukebox.html
@@ -69,6 +69,25 @@
       text-shadow: 0 0 6px #d4af37;
     }
   </style>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "CollectionPage",
+  "name": "Jack’s Jukebox",
+  "hasPart": {
+  "@type": "CreativeWork",
+  "name": "Artist features and curated music entries"
+},
+  "description": "Jack’s Jukebox is a living, curated music archive within Harperville™, featuring artists and songs selected for emotional resonance, memory, and mythic storytelling.",
+  "url": "https://harperville.me/jukebox.html",
+  "creator": {
+    "@type": "Person",
+    "name": "Jack Aspen Harper",
+    "url": "https://harperville.me/"
+  }
+}
+</script>
+
 </head>
 
 <body id="top">
