--- a/artists/ed-sheeran.html
+++ b/artists/ed-sheeran.html
@@ -54,6 +54,20 @@
 }
 
   </style>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MusicGroup",
+  "name": "Ed Sheeran",
+  "genre": "POP",
+  "description": "Curated artist feature on Jack’s Jukebox — part of Harperville™, a mythic archive of music, memory, and emotional weather.",
+  "sameAs": [
+    "https://music.apple.com/us/artist/ed-sheeran/183313439"
+  ],
+  "url": "https://harperville.me/artists/ed-sheeran.html"
+}
+</script>
+
 </head>
 
 <!-- CHANGE THIS CLASS PER ARTIST -->
