--- a/artists/maroon-5.html
+++ b/artists/maroon-5.html
@@ -54,6 +54,20 @@
 }
 
   </style>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MusicGroup",
+  "name": "Maroon 5",
+  "genre": "Alternative Pop-Rock",
+  "description": "Curated artist feature on Jack’s Jukebox — part of Harperville™, a mythic archive of music, memory, and emotional weather.",
+  "sameAs": [
+    "https://music.apple.com/us/artist/maroon-5/1798556"
+  ],
+  "url": "https://harperville.me/artists/maroon-5.html"
+}
+</script>
+
 </head>
 
 <!-- CHANGE THIS CLASS PER ARTIST -->
