New blog entry 12-16-25 uploaded and changed statuses

--- a/ledger.html
+++ b/ledger.html
@@ -28,6 +28,13 @@
         <div class="blog-grid">
             
             <article class="blog-card">
+                <div class="blog-date">Dec 16, 2025</div>
+                <h3>Limbo is a Terrible Roommate</h3>
+                <p class="blog-summary">Most days I feel like Boq halfway through becoming the Tin Man — stiff, timber, and one emotional beat away from asking someone to oil my joints.</p>
+                <a href="blog/limbo-is-a-terrible-roommate.html" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
+            </article>
+
+            <article class="blog-card">
                 <div class="blog-date">Dec 13, 2025</div>
                 <h3>The Day the Weather Finally Said <i>‘Fuck This’</i> and That be That</h3>
                 <p class="blog-summary">I’m going to live, damn it. Messily. Softly. Honestly. With fucks used as commas, commas used as breaths, and breaths used as proof that I’m still fucking here.</p>
